# mc-admin

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  publish-image.sh  snapshot.md
backend/: .gitignore  CLAUDE.md  pyproject.toml  test_audit.py
backend/.github/: copilot-instructions.md
backend/alembic/: env.py
backend/alembic/versions/: 07f7f1887ca3_add_restoration_table.py  2026052400_add_restoration_table.py  2026060500_add_self_check_system_cron.py  6d6d1f810ba3_add_default_variable_config.py  ba4b4a1fb5a8_remove_last_seen_from_player_table_and_.py  c3baaa5067b4_add_created_at_field_to_user_model.py  f2ee81a56fee_add_server_template_support.py
backend/app/: __main__.py  audit.py  commands.py  config.py  dependencies.py  grid_geometry.py  jwt_utils.py  logger.py  login_code.py  main.py  models.py
backend/app/archive/: __init__.py  uploads.py
backend/app/auth/: jwt_utils.py  login_code.py  session.py
backend/app/background_tasks/: __init__.py  manager.py  models.py  types.py
backend/app/chunk_prune/: __init__.py  models.py  service.py
backend/app/common/: __init__.py  file_operations.py
backend/app/cron/: __init__.py  crud.py  instance.py  manager.py  registry.py  restart_scheduler.py  types.py
backend/app/db/: database.py  migrations.py
backend/app/dns/: __init__.py  dns.py  dnspod.py  huawei.py  manager.py  monitor.py  router.py  types.py  utils.py
backend/app/dynamic_config/: __init__.py  crud.py  manager.py  migration.py  schemas.py
backend/app/events/: __init__.py  base.py  bus.py  dispatcher.py  models.py  types.py
backend/app/files/: __init__.py  base.py  multi_file.py  ownership.py  search.py  types.py  utils.py
backend/app/ftb_claims/: __init__.py  cluster.py  extract.py  models.py  runner.py
backend/app/log_monitor/: __init__.py  events.py  monitor.py  parser.py
backend/app/mcmap/: __init__.py  cache.py  events.py  manager.py  palette.py  queue.py  runner.py  types.py
backend/app/minecraft/: __init__.py  compose.py  instance.py  manager.py  properties.py  utils.py
backend/app/player_locations/: __init__.py  extract.py  models.py  runner.py
backend/app/players/: __init__.py  chat_tracker.py  heartbeat.py  identity_resolver.py  manager.py  mojang_api.py  name_filters.py  player_manager.py  player_syncer.py  rcon_validator.py  session_tracker.py  skin_fetcher.py  skin_updater.py  tracking.py
backend/app/routers/: admin.py  archive.py  auth.py  config.py  console.py  cron.py  dns.py  events.py  files.py  (+8 more)
backend/docs/: archive-upload.md  audit.md  auth.md  background-tasks.md  bot-integration-apis.md  chunk-prune.md  cron.md  database-migrations.md  dns.md  dynamic-config.md  files.md  ftb-claims.md  log-monitor.md  minecraft.md  player-identity.md  player-locations.md  players.md  self-check.md  server-map.md  servers.md  snapshots.md  templates.md  websocket-console.md  world-restore.md
backend/tests/: test_archive_compression.py  test_archive_operations.py  test_archive_sha256.py  test_async_fs_resolve_inside.py  test_audit.py  test_auth_session.py  test_common_file_operations.py  test_compose.py  test_compose_file.py  test_config_binary_paths.py  test_create_server.py  test_decompression.py  test_docker.py  test_dynamic_config_api.py  test_dynamic_config_integration.py  test_events.py  test_file_operations.py  test_file_search.py  test_file_search_api.py  test_grid_geometry.py  test_instance.py  test_integration.py  test_log_exception_decorator.py  test_log_monitor.py  test_log_parser.py  test_log_rotator.py  test_monitoring.py  test_populate_integration.py  test_rcon_filtering.py  test_snapshots_basic.py  test_snapshots_endpoints.py  test_snapshots_integrated.py  test_spa_fallback.py  test_startup_migrations.py  test_task_executor_background.py  test_task_manager.py  test_task_system.py  test_tasks_router.py  test_time_restriction.py  test_websocket_console.py
(+669 files in other folders)
