[tool.poetry]
name = "mc-admin-backend"
version = "0.0.0-dev"
description = ""
authors = ["xyqyear <xyqyear@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
sqlalchemy = "^2.0.43"
aiosqlite = "^0.21.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
asyncer = "^0.0.8"
python-multipart = "^0.0.9"
pip = "^24.2"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
joserfc = "^1.3.1"
psutil = "^7.0.0"
aiofiles = "^24.1.0"
pyyaml = "^6.0.2"
watchdog = "^6.0.0"
httpx = "^0.28.1"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ipykernel = "^6.30.1"
ipywidgets = "^8.1.7"
pytest = "^8.4.1"
coverage = "^7.10.6"
setuptools = "^80.9.0"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
alembic = "^1.16.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-vv --cov=app --cov-report=xml:cov.xml --cov-report=html:cov_html --cov-report=term-missing"
