[tool.poetry]
name = "mc-admin-backend"
version = "0"
description = ""
authors = ["xyqyear <xyqyear@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.119.0"
pydantic = "^2.12.3"
pydantic-settings = "^2.11.0"
sqlalchemy = "^2.0.44"
aiosqlite = "^0.21.0"
asyncer = "^0.0.9"
python-multipart = "^0.0.20"
pip = "^25.2"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
joserfc = "^1.4.0"
psutil = "^7.1.1"
aiofiles = "^25.1.0"
pyyaml = "^6.0.3"
watchfiles = "^1.1.1"
jinja2 = "^3.1.6"
apscheduler = "^3.11.0"
requests = "^2.32.5"
aiohttp = "^3.13.1"
pillow = "^12.0.0"
tencentcloud-sdk-python = "^3.0.1477"
huaweicloudsdkdns = "^3.1.171"
httpx = "^0.28.1"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.0.1"
ipywidgets = "^8.1.7"
pytest = "^8.4.2"
coverage = "^7.11.0"
setuptools = "^80.9.0"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
alembic = "^1.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-vv --cov=app --cov-report=xml:cov.xml --cov-report=html:cov_html --cov-report=term-missing"
