[project]
name = "mc-admin-backend"
version = "0"
description = ""
authors = [{ name = "xyqyear", email = "xyqyear@gmail.com" }]
requires-python = ">=3.13,<4"
readme = "README.md"

dependencies = [
    "fastapi~=0.128.0",
    "pydantic>=2.12.3,<3",
    "pydantic-settings>=2.11.0,<3",
    "sqlalchemy>=2.0.44,<3",
    "aiosqlite~=0.22.0",
    "asyncer==0.0.12",
    "python-multipart==0.0.21",
    "pip>=25.2,<26",
    "uvicorn[standard]~=0.40.0",
    "joserfc>=1.4.0,<2",
    "psutil>=7.1.1,<8",
    "aiofiles>=25.1.0,<26",
    "pyyaml>=6.0.3,<7",
    "watchfiles>=1.1.1,<2",
    "jinja2>=3.1.6,<4",
    "apscheduler>=3.11.0,<4",
    "pillow>=12.0.0,<13",
    "tencentcloud-sdk-python>=3.0.1477,<4",
    "huaweicloudsdkdns>=3.1.171,<4",
    "httpx>=0.28.1,<0.29",
    "pwdlib[argon2]~=0.3.0",
    "alembic>=1.17.0,<2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1,<8",
    "ipywidgets>=8.1.7,<9",
    "pytest~=9.0.2",
    "coverage>=7.11.0,<8",
    "setuptools>=80.9.0,<81",
    "pytest-asyncio>=1.2.0,<2",
    "pytest-cov>=7.0.0,<8",
]

[tool.uv]
package = false

[tool.uv.build-backend]
module-name = ["app"]
module-root = ""

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-vv --cov=app --cov-report=xml:cov.xml --cov-report=html:cov_html --cov-report=term-missing"
